# occ-ai-dep-whispercpp

./: CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  setup_cuda.ps1
.github/workflows/: build.yml
cmake/: FindCLBlast.cmake
